--- a/Final_Project/nbproject/project.properties
+++ b/Final_Project/nbproject/project.properties
@@ -44,12 +44,12 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-natives.platform=windows-i586
+natives.platform=windows-amd64
 # Property libs.JOGL.classpath is set here just to make sharing of project simpler.
 # The library definition has always preference over this property.
 libs.JOGL.classpath=../opengl/build/cluster/libs/jogl.jar
 libs.GLUEGEN-RT.classpath=../opengl/build/cluster/libs/gluegen-rt.jar
-main.class=org.yourorghere.Obyek
+main.class=org.yourorghere.Object
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 platform.active=default_platform
@@ -59,7 +59,7 @@ run.classpath=\
 # Space-separated list of JVM arguments used when running the project
 # (you may also define separate properties like run-sys-prop.name=value instead of -Dname=value
 # or test-sys-prop.name=value to set system properties for unit tests):
-run.jvmargs=-Djava.security.policy=applet.policy
+run.jvmargs=
 run-sys-prop.java.library.path=\
     ${libs.JOGL.classpath}-natives-${natives.platform}${path.separator}\
     ${libs.GLUEGEN-RT.classpath}-natives-${natives.platform}
