--- a/Final_Project/nbproject/private/private.properties
+++ b/Final_Project/nbproject/private/private.properties
@@ -1,1 +1,1 @@
-user.properties.file=C:\\Users\\randyano\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\nsyog\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
